[pop3] fix: don't crash by returning a null instead of CompletableFuture.failedFuture(); Also uses Pop3Error instead of generic Exception()